<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_custom_color_title">Custom color</string>
    <string name="accessibility_custom_font_title">Custom font</string>
    <string name="accessibility_custom_icon_title">Custom icon</string>
    <string name="accessibility_custom_name_title">Custom style name</string>
    <string name="accessibility_custom_shape_title">Custom shape</string>
    <string name="accessibility_customize_hidden">Customize hidden</string>
    <string name="accessibility_customize_shown">Customize shown</string>
    <string name="accessibility_info_hidden">Info hidden</string>
    <string name="accessibility_info_shown">Info shown</string>
    <string name="accessibility_preview_pager">Page %1$d of %2$d</string>
    <string name="accessibility_work_profile_app_description">Work %s</string>
    <string name="adaptive_color_title">Dynamic</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Wallpaper &amp; style</string>
    <string name="app_not_found">"App isn't installed."</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_clock_msg">Clock set successfully</string>
    <string name="applied_color_msg">Color applied successfully</string>
    <string name="applied_grid_msg">Grid set successfully</string>
    <string name="applied_theme_msg">Style set successfully</string>
    <string name="apply_btn">Apply</string>
    <string name="apply_theme_btn">Apply</string>
    <string name="apply_theme_error_msg">There was a problem applying the style</string>
    <string name="beta_title">Beta</string>
    <string name="bottom_action_bar_apply">Apply</string>
    <string name="bottom_action_bar_back">Back</string>
    <string name="bottom_action_bar_download">Download</string>
    <string name="bottom_action_bar_edit">Edit</string>
    <string name="bottom_action_bar_slideshow_wallpaper">Slideshow Wallpaper</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="build_case">Build my case</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download_wallpaper">Exit</string>
    <string name="center_crop_wallpaper_position">Center crop</string>
    <string name="center_wallpaper_position">Center</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="cinematic_effects_toogle">3D wallpapers</string>
    <string name="circular_border">M50,0 A50,50,0,1,1,50,100 A50,50,0,1,1,50,0</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clock_preview_content_description">%1$s clock preview</string>
    <string name="clock_title">Clock</string>
    <string name="clocks_provider_authority">com.android.keyguard.clock</string>
    <string name="clocks_stub_package">com.google.pixelcustomclocks</string>
    <string name="collection_not_exist_msg">"The collection doesn't exist"</string>
    <string name="color_changed">Color changed</string>
    <string name="color_component_title">Choose color</string>
    <string name="color_preview_content_description">Color preview</string>
    <string name="color_title">Color</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="configure_wallpaper">Settings…</string>
    <string name="copy">Copy</string>
    <string name="currently_set_home_wallpaper_thumbnail">Currently set home screen wallpaper thumbnail</string>
    <string name="currently_set_lock_wallpaper_thumbnail">Currently set lock screen wallpaper thumbnail</string>
    <string name="currently_set_wallpaper_thumbnail">Currently set wallpaper thumbnail</string>
    <string name="custom_theme">Custom</string>
    <string name="custom_theme_delete">Delete</string>
    <string name="custom_theme_fragment_title">Custom Style</string>
    <string name="custom_theme_next">Next</string>
    <string name="custom_theme_previous">Previous</string>
    <string name="custom_theme_title">Custom %1$d</string>
    <string name="daily_refresh_tile_subtitle">Tap to turn on</string>
    <string name="daily_refresh_tile_title">Daily wallpaper</string>
    <string name="default_theme_title">Default</string>
    <string name="delete_custom_theme_button">Delete</string>
    <string name="delete_custom_theme_confirmation">Delete Custom style?</string>
    <string name="delete_live_wallpaper">Delete</string>
    <string name="delete_wallpaper_confirmation">Delete this wallpaper from your phone?</string>
    <string name="edit_custom_theme_lbl">Tap to edit</string>
    <string name="effect_error_dialog_body">"We were unable to apply the effects.
Try with another photo."</string>
    <string name="effect_error_dialog_title">Oh no!</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="explore">Explore</string>
    <string name="explore_home_screen">Explore home screen wallpaper</string>
    <string name="explore_lock_screen">Explore lock screen wallpaper</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_wallpaper_title">Wallpaper</string>
    <string name="font_card_body">Add your favorite fonts to every screen</string>
    <string name="font_card_title">ABC • abc • 123</string>
    <string name="font_component_option_thumbnail">Aa</string>
    <string name="font_component_title">Choose font</string>
    <string name="font_preview_content_description">Font preview</string>
    <string name="full_screen_task_affinity">.fullscreen</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gird_picker_entry_content_description">Change app grid</string>
    <string name="grid_control_metadata_name">com.android.launcher3.grid.control</string>
    <string name="grid_options_title">Choose a grid size</string>
    <string name="grid_preview_card_content_description">Grid preview</string>
    <string name="grid_title">App grid</string>
    <string name="grid_title_pattern">%1$dx%2$d</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="set_wallpaper_both_destination">Home and lock screens</string>
    <string name="set_wallpaper_home_screen_destination">Home screen</string>
    <string name="set_wallpaper_lock_screen_destination">Lock screen</string>
    <string name="tab_customize">Customize</string>
    <string name="tab_info">Info</string>
    <string name="wallpaper_effects_subtitle">Make your photo a 3D wallpaper that moves when your phone moves</string>
    <string name="wallpaper_effects_title">3D Wallpapers</string>
</resources>