<?xml version="1.0" encoding="utf-8"?>
<com.android.wallpaper.picker.WallpaperEffectsView android:theme="@style/WallpaperPicker.BottomPaneStyle" android:orientation="vertical" android:padding="@dimen/wallpaper_info_pane_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TitleTextAppearance" android:textColor="?android:textColorPrimary" android:id="@id/wallpaper_effects_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wallpaper_effects_title" android:lineHeight="24.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="?android:textColorTertiary" android:id="@id/wallpaper_effects_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/wallpaper_info_pane_subtitle1_top_margin" android:text="@string/wallpaper_effects_subtitle" android:lineHeight="20.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="26.0dip">
        <TextView android:textColor="?android:textColorTertiary" android:id="@id/dark_mode_toggle_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cinematic_effects_toogle" android:layout_weight="1.0" />
        <Switch android:id="@id/cinematic_effect_switch" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Switch.SettingsLib" />
    </LinearLayout>
</com.android.wallpaper.picker.WallpaperEffectsView>