<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/action_tabs">
        <FrameLayout android:theme="@style/WallpaperPicker.BottomPaneStyle" android:id="@id/action_bottom_sheet" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/bottom_sheet_margin" app:behavior_peekHeight="0.0dip" app:layout_behavior="com.android.wallpaper.widget.BottomActionBar$QueueStateBottomSheetBehavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:theme="@style/BottomActionItemStyle" android:id="@id/action_tabs" android:paddingTop="@dimen/bottom_actions_top_padding" android:paddingBottom="@dimen/bottom_actions_bottom_padding" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_actions_height" android:layout_alignParentBottom="true" android:layoutDirection="locale" android:layout_marginHorizontal="@dimen/bottom_actions_horizontal_margin">
        <ImageView android:id="@id/action_back" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_close_gm2_24px" android:contentDescription="@string/bottom_action_bar_back" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_rotation" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_rotation" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_slideshow_24dp" android:contentDescription="@string/bottom_action_bar_slideshow_wallpaper" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_delete" app:layout_constraintStart_toEndOf="@id/action_back" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_delete" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_delete_24px" android:contentDescription="@string/delete_live_wallpaper" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_information" app:layout_constraintStart_toEndOf="@id/action_rotation" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_information" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_info_gm2_24px" android:contentDescription="@string/tab_info" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_edit" app:layout_constraintStart_toEndOf="@id/action_delete" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_edit" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_pan_zoom_24dp" android:contentDescription="@string/bottom_action_bar_edit" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_customize" app:layout_constraintStart_toEndOf="@id/action_information" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_customize" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_tune_black_24dp" android:contentDescription="@string/tab_customize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_download" app:layout_constraintStart_toEndOf="@id/action_edit" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_download" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_file_download_gm2_24px" android:contentDescription="@string/bottom_action_bar_download" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_progress" app:layout_constraintStart_toEndOf="@id/action_customize" app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar android:id="@id/action_progress" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_apply" app:layout_constraintStart_toEndOf="@id/action_download" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/action_apply" android:visibility="gone" android:layout_width="@dimen/bottom_action_button_width" android:layout_height="@dimen/bottom_action_button_height" android:src="@drawable/ic_done_gm2_24px" android:contentDescription="@string/bottom_action_bar_apply" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/action_apply_text_button" app:layout_constraintStart_toEndOf="@id/action_progress" app:layout_constraintTop_toTopOf="parent" />
        <Button android:textColor="?android:textColorPrimaryInverse" android:layout_gravity="center" android:id="@id/action_apply_text_button" android:background="@drawable/bottom_apply_button_background" android:padding="0.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/bottom_action_bar_apply" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/action_apply" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>